--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
     <!-- start header  -->
     <header >
-        <div class="container">
+        <div class="container" style="display: none;">
     <div class="logo" > <img class="logo" src="images/logo.svg" alt="logo"></div>
         <div id="menu">
             <nav class="menu-links">
@@ -32,7 +32,7 @@
       <!-- end header  -->
 
       <!-- showcase start -->
-      <section class="showcase" >
+      <section class="showcase" style="display: none;">
         <div class="container">
             <div class="content">
                 <div class="ingress">WELCOME TO BMARKETO SHOP</div>
@@ -52,7 +52,7 @@
       <!-- showcase end -->
 
       <!-- start best collection -->
-      <section class="_collection" >
+      <section class="_collection" style="display: none;" >
        <div class="container">
         <div class="_header">Best Collection</div>
     </div>
@@ -193,7 +193,7 @@
 
 
 <!-- start discount section -->
-<section class="_discount">
+<section class="_discount" style="display: none;">
 
 <div class="container">
 <div class="_cards">
@@ -257,7 +257,7 @@
 <!-- end discount section -->
 
 <!-- start topselling -->
-<section class="_topSelling">
+<section class="_topSelling" >
    
         <div class="_header">Top selling products in this week</div>
    
@@ -410,7 +410,8 @@
 <section class="subscribe">
 <div class="container">
     <form action="">
-        <input class="mail-text" type="text" placeholder="Enter your mail here"><button class="s_button" type="submit">SUBSCRIBE FOR NEWSLETTER</button>
+        <input class="mail-text" type="email" placeholder="Enter your mail here">
+        <button class="s_button" type="submit">SUBSCRIBE FOR NEWSLETTER</button>
         
     </form>
 </div>
