--- a/home.html
+++ b/home.html
@@ -418,7 +418,7 @@
 </section>
 <!-- end subscribe section -->
 <footer>
-    <div style="display: flex; background-color: black; justify-content: center; height: 60px; align-items: center;"> &copy; 2023 bmarketo.  All right reserved.</div>
+    <div > &copy; 2023 bmarketo.  All right reserved.</div>
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
