--- a/home.html
+++ b/home.html
@@ -186,7 +186,7 @@
     </div>
     
     </div>
-    <div class="container" style="height: 60px; margin-bottom: 40px; display: flex; justify-content: center;">
+    <div class="loadmore">
     <button class="btn-white">LOAD MORE <i class="fa-regular fa-arrow-rotate-right"></i></button>
 </div>
       </section>
@@ -357,7 +357,7 @@
       </div>
   
   </div>
-  <div style="margin-top: 10px; display: flex; justify-content: center;"> <button class="btn btn-arrow-white"><i class="fa-thin fa-chevron-left"></i></button>&nbsp;<button class="btn btn-arrow-white"><i class="fa-thin fa-chevron-right"></i></button>  </div>
+  <div class="arrowslide"> <button class="btn btn-arrow-white"><i class="fa-thin fa-chevron-left"></i></button>&nbsp;<button class="btn btn-arrow-white"><i class="fa-thin fa-chevron-right"></i></button>  </div>
 <div class="container">
     <div class="_bDiscount">
       <div class="card">
